<resources>
    <string name="app_name">Flashlight</string>
    <string name="turn_on_and_off_light">Turn on and off light</string>
    <string name="feedback_email" translatable="false">kaushalvasava.app.feedback@gmail.com</string>
    <string name="sos">SOS</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="more_apps">More Apps</string>
    <string name="share_app">Share this App</string>
    <string name="feedback">Feedback</string>
    <string name="app_version">App Version</string>
    <string name="blinking_speed">Blinking Speed : %d</string>
    <string name="brightness_level">Brightness Level : %d</string>
    <string name="blinking_time">Blinking Time</string>
    <string name="enter_sos_number">Enter SOS Number</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="sensitivity">Shake Sensitivity : %.2f</string>
    <string name="incoming_call">Incoming call flash light</string>
    <string name="light_blinking_speed">Flash light blinking speed</string>
    <string name="flash_light">Flash Light</string>
    <string name="shake_sensitivity">Shake sensitivity</string>
    <string name="big_lamp">Big bulb as a switch</string>
    <string name="shake_to_light">Shake to wake</string>
    <string name="sos_toast">Please enter valid phone number!</string>
    <string name="camera_denied_toast">Camera Permission denied!,Camera permission needed for flashlight</string>
    <string name="flash_camera_toast">Flash light feature now working</string>
    <string name="phone_denied_toast">Phone state Permission denied</string>
    <string name="blinking_toast">Flash will be blinking whenever call arrives</string>
    <string name="phone_call_denied_toast">Phone Permission denied</string>
    <string name="market_string" translatable="false">market://search?q=pub:Kaushal Vasava</string>
    <string name="market_developer_string" translatable="false">http://play.google.com/store/apps/developer?id=Kaushal Vasava</string>
    <string name="play_store_share" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="switch_txt">Switch for screen light and flash light</string>

    <string name="contact_support">Contact Support</string>
    <string name="rating">Rate the app</string>
    <string name="playback_speed" translatable="false">%.2fx</string>
    <string name="tap_gesture">Tapping on the left 2 times on the image to go behind to 10 seconds and tapping on the right 2 times on the image to go forward to 10 seconds </string>
    <string name="feedback_text">Send feedback, If the app keeps crashing \'Clear app data\' or send it an Email</string>
    <string name="rating_text">Love this app? Let us know in Google Play Store how we can make it even better</string>
    <string name="more_app_text">Check out other apps</string>
    <string name="share_text">Share the app with your friends and family</string>
    <string name="developer">Developer</string>
    <string name="developer_name">Kaushal Vasava</string>
    <string name="about">About</string>
    <string name="current_version">Current version</string>
    <string name="more_options">More Options</string>
    <string name="more">More</string>
    <string name="save">Save</string>
    <string name="enable">enable</string>
    <string name="disable">disable</string>
    <string name="sound_vibration">Sound and Vibration</string>
    <string name="special_feature">Special features</string>
    <string name="notification">Notification</string>
    <string name="incoming_notification">Incoming call notification</string>
    <string name="app_notification">Notification of app</string>
    <string name="touch_sound">Touch sound</string>
    <string name="haptic_feedback">Haptic feedback</string>
    <string name="turn_on_startup">Turn on at startup</string>
    <string name="allow_perm">Allow permission</string>
    <string name="permission_desc">Please allow read state and make phone call permission for incoming call notification and SOS feature.</string>
    <string name="sos_call">SOS with call</string>
    <string name="no_application_found">Application not found</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="share_this_app">Share this FlashLightApp</string>
    <string name="please_write_suggestions">Please write your suggestions or issues</string>
    <string name="feedback_from_flashlight">Feedback from FlashLight, %s</string>
    <string name="permission_denied">Permission denied</string>
    <string name="open_settings">Open settings</string>
    <string name="device_doesn_t_support_flash_light">Your device doesn\'t support flash light</string>
    <string name="sos_number">SOS Number</string>
    <string name="contact_is_successfully_added">Contact is successfully added</string>
    <string name="please_enter_sos_number">Please enter SOS Number!</string>
    <string name="screen_colors">Screen Colors</string>
    <string name="downloading_start">Downloading start</string>
    <string name="update_failed">Update failed</string>
    <string name="restart">Restart</string>
    <string name="new_app_is_ready">New app is ready</string>
    <string name="user_cancelled_the_operation">User cancelled the operation</string>
    <string name="made_in_india" translatable="false">Made with ❤️ in India \uD83C\uDDEE\uD83C\uDDF3</string>
</resources>