<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notification">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_notification"
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="show_notification"
            app:summaryOff="@string/disable"
            app:summaryOn="@string/enable"
            app:title="@string/app_notification" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_phone"
            app:defaultValue="true"
            app:dependency="show_notification"
            app:iconSpaceReserved="false"
            app:key="call_notification"
            app:summary="Whenever call arrives flash will be blinking"
            app:title="@string/incoming_notification"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>
    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/special_feature">
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_sos_icon"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="sos_call"
            app:summaryOff="@string/disable"
            app:summaryOn="@string/enable"
            app:title="@string/sos_call" />
        <EditTextPreference
            android:title="SOS Number"
            app:iconSpaceReserved="false"
            app:key="sos_number"
            app:singleLineTitle="true"
            app:summary="SOS call for emergency condition" />
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_shake"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="shake_to_light"
            app:summaryOff="@string/disable"
            app:summaryOn="@string/enable"
            app:title="@string/shake_to_light" />
        <SeekBarPreference
            android:defaultValue="35"
            android:max="50"
            app:dependency="shake_to_light"
            app:iconSpaceReserved="false"
            app:key="shake_sensitivity"
            app:min="10"
            app:showSeekBarValue="true"
            app:title="@string/shake_sensitivity" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="flash_on_start"
            app:summaryOff="@string/disable"
            app:summaryOn="@string/enable"
            app:title="@string/turn_on_startup" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_pause"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="big_flash_as_switch"
            app:summaryOff="@string/disable"
            app:summaryOn="@string/enable"
            app:title="@string/big_lamp" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/sound_vibration">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_haptic"
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="haptic_feedback"
            app:summaryOff="@string/disable"
            app:summaryOn="@string/enable"
            app:title="@string/haptic_feedback" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_sound"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="sound_feedback"
            app:summaryOff="@string/disable"
            app:summaryOn="@string/enable"
            app:title="@string/touch_sound" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/more">
        <Preference
            android:icon="@drawable/ic_share"
            app:iconSpaceReserved="false"
            app:key="share"
            app:summary="@string/share_text"
            app:title="@string/share_app"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:icon="@drawable/apps"
            app:iconSpaceReserved="false"
            app:key="more_app"
            app:summary="@string/more_app_text"
            app:title="@string/more_apps"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:icon="@drawable/ic_rating"
            app:iconSpaceReserved="false"
            app:key="rating"
            app:summary="@string/rating_text"
            app:title="@string/rating"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:icon="@drawable/ic_mail"
            app:iconSpaceReserved="false"
            app:key="feedback"
            app:summary="@string/feedback_text"
            app:title="@string/contact_support"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/about">
        <Preference
            app:icon="@drawable/ic_website"
            app:iconSpaceReserved="false"
            app:key="developer"
            app:summary="@string/developer_name"
            app:title="@string/developer"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="app_version"
            app:title="@string/current_version"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="app_version"
            app:title="@string/made_in_india"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>